; ModuleID = '/home/carl/AnghaBench/mongoose/examples/nRF52/http/extr_bleconfig.c_nrf_driver_interface_down.c'
source_filename = "/home/carl/AnghaBench/mongoose/examples/nRF52/http/extr_bleconfig.c_nrf_driver_interface_down.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [31 x i8] c"[APPL]: IPv6 interface down.\0D\0A\00", align 1
@DISPLAY_LED_0 = common dso_local global i32 0, align 4
@DISPLAY_LED_1 = common dso_local global i32 0, align 4
@DISPLAY_LED_2 = common dso_local global i32 0, align 4
@DISPLAY_LED_3 = common dso_local global i32 0, align 4
@LED_ONE = common dso_local global i32 0, align 4
@TCP_STATE_DISCONNECTED = common dso_local global i32 0, align 4
@m_tcp_state = common dso_local global i32 0, align 4
@JOINING_MODE_TIMER_START = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nrf_driver_interface_down() #0 {
  %1 = call i32 @APPL_LOG(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0))
  %2 = load i32, i32* @DISPLAY_LED_0, align 4
  %3 = load i32, i32* @DISPLAY_LED_1, align 4
  %4 = or i32 %2, %3
  %5 = load i32, i32* @DISPLAY_LED_2, align 4
  %6 = or i32 %4, %5
  %7 = load i32, i32* @DISPLAY_LED_3, align 4
  %8 = or i32 %6, %7
  %9 = call i32 @LEDS_OFF(i32 %8)
  %10 = load i32, i32* @LED_ONE, align 4
  %11 = call i32 @LEDS_ON(i32 %10)
  %12 = load i32, i32* @TCP_STATE_DISCONNECTED, align 4
  store i32 %12, i32* @m_tcp_state, align 4
  ret void
}

declare dso_local i32 @APPL_LOG(i8*) #1

declare dso_local i32 @LEDS_OFF(i32) #1

declare dso_local i32 @LEDS_ON(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
